apps/subsystems/downloaders/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: prowlarr
        image: ghcr.io/linuxserver/prowlarr:2.6.5@sha256:f9151e5bc1025c6d0a630d503210cdcb6bb55a7cc098562609d96a408d838902
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 9696
        ports:
        - name: prowlarr
          containerPort: 9696
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 9696
        resources:
          requests:
            cpu: 15m
            memory: 145Mi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config
          name: prowlarr-data
        - mountPath: /config/logs
          name: prowlarr-logs
        - mountPath: /tmp
          name: prowlarr-temp
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data
      - name: prowlarr-logs
        emptyDir: {}
      - name: prowlarr-temp
        emptyDir: {}
