apps/subsystems/downloaders/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
  - name: prowlarr
    port: 9696
    targetPort: prowlarr
    protocol: TCP
  type: ClusterIP
